--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,14 +1,9 @@
-<article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-  <h3 class="archive__item-title" itemprop="headline">
-    {{ post.title }}
-  </h3>
-
-  <p>
-    {{ post.authors }}<br />
-    <em>{{ post.venue | default: post.journal }}</em>
-    {% if post.volume %} <strong>{{ post.volume }}</strong>{% endif %}
+<article>
+  <h3>{{ post.title }}</h3>
+  <p>{{ post.authors }}</p>
+  <p><em>{{ post.journal }}</em> {% if post.volume %} <strong>{{ post.volume }}</strong>{% endif %}
     {% if post.number %} ({{ post.number }}){% endif %}
     {% if post.pages %}, {{ post.pages }}{% endif %}
-    {% if post.doi %}. <a href="https://doi.org/{{ post.doi }}">DOI</a>{% endif %}
+    {% if post.doi %} <a href="https://doi.org/{{ post.doi }}">DOI</a>{% endif %}
   </p>
 </article>
