--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,4 +1,6 @@
 <article>
+  <p style="color:red;">[debug: archive-single.html is working]</p>
+  
   <h3>{{ post.title }}</h3>
   <p>{{ post.authors }}</p>
   <p><em>{{ post.journal }}</em> {% if post.volume %} <strong>{{ post.volume }}</strong>{% endif %}
