--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,11 +1,26 @@
-<article>
-  <h3>{{ include.post.title }}</h3>
-  <p>{{ include.post.authors | replace: "Azat Khadiev", "<strong>Azat Khadiev</strong>" }}</p>
+<article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
+  {% assign author_text = include.post.authors | replace: "Azat Khadiev", "<strong>Azat Khadiev</strong>" %}
+
   <p>
-    <em>{{ include.post.journal }}</em>
-    {% if include.post.volume %}<strong> {{ include.post.volume }}</strong>{% endif %}
-    {% if include.post.number %} ({{ include.post.number }}){% endif %}
-    {% if include.post.pages %}, {{ include.post.pages }}{% endif %}
-    {% if include.post.doi %} <a href="https://doi.org/{{ include.post.doi }}">DOI</a>{% endif %}
+    {{ author_text }}.<br />
+    <em>{{ include.post.title }}</em>.<br />
+    {% if include.post.journal %}
+      <span style="font-style: italic;">{{ include.post.journal }}</span>
+    {% endif %}
+    {% if include.post.volume %}
+      <strong>{{ include.post.volume }}</strong>
+    {% endif %}
+    {% if include.post.number %}
+      ({{ include.post.number }})
+    {% endif %}
+    {% if include.post.pages %}
+      , {{ include.post.pages }}
+    {% endif %}
+    {% if include.post.year %}
+      ({{ include.post.year }})
+    {% endif %}
+    {% if include.post.doi %}
+      . <a href="https://doi.org/{{ include.post.doi }}" target="_blank">🔗 DOI</a>
+    {% endif %}
   </p>
 </article>
